# project_euler

./: Makefile  README.md  pyproject.toml
src/: euler_001.py  euler_002.py  euler_003.py  euler_004.py  euler_005.py  euler_006.py  euler_007.py  euler_008.py  euler_009.py  euler_010.py  euler_011.py  euler_012.py  euler_013.py  euler_014.py  euler_015.py  euler_016.py  euler_017.py  euler_018.py  euler_019.py  euler_020.py  euler_021.py  euler_022.py  euler_023.py  euler_024.py  euler_025.py  euler_026.py  euler_027.py  euler_028.py  euler_029.py  euler_030.py  euler_031.py  main.py
tests/: test_euler_001.py  test_euler_002.py  test_euler_003.py  test_euler_004.py  test_euler_005.py  test_euler_006.py  test_euler_007.py  test_euler_008.py  test_euler_009.py  test_euler_010.py  test_euler_011.py  test_euler_012.py  test_euler_013.py  test_euler_014.py  test_euler_015.py  test_euler_016.py  test_euler_017.py  test_euler_018.py  test_euler_019.py  test_euler_020.py  test_euler_021.py  test_euler_022.py  test_euler_024.py  test_euler_025.py  test_euler_026.py  test_euler_028.py  test_euler_029.py  test_euler_030.py  test_euler_031.py
