[project]
name = "project_euler"
version = "0.1.0"
description = "Project Euler solutions"
authors = [
    { name = "Alessandro Conflitti"}
]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.18.1",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 78

# [tool.ruff.format]
# quote-style = "single"

